fix: restore spacing on blog list items

--- a/src/less/blog.less
+++ b/src/less/blog.less
@@ -8,7 +8,7 @@
   padding: 0;
 
   li + li {
-    margin: 2.25em 0 0;
+    margin: 2em 0 0;
   }
 }
 
